yaml/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kubecraft
  namespace: kubecraft
  labels:
    app: kubecraft
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: kubecraft
  template:
    metadata:
      labels:
        app: kubecraft
        name: kubecraft
    spec:
      containers:
      - image: quay.io/ktenzer/kubecraft:latest
        imagePullPolicy: Always
        name: kubecraft
        ports:
        - containerPort: 8000
        readinessProbe:
          tcpSocket:
            port: 8000
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 8000
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        startupProbe:
          tcpSocket:
            port: 8000
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
      restartPolicy: Always
  triggers:
  - type: ConfigChange
---
apiVersion: v1
kind: Service
metadata:
  namespace: kubecraft
  labels:
    app: kubecraft
  name: kubecraft
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: kubecraft
    name: kubecraft
status:
  loadBalancer: {}   
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: kubecraft
  annotations:
    openshift.io/host.generated: "true"
  name: kubecraft
spec:
  to:
    kind: Service
    name: kubecraft
    weight: 100
  port:
    targetPort: 8000
  wildcardPolicy: None
